<resources>
    <string name="app_name">Metflix</string>
    <string name="login_image">Login Image</string>
    <string name="lets_you_in">Let\'s you in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_github">Continue with Github</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="back_button">Back button</string>
    <string name="or">or</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="e_mail_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="or_continue_with">or continue with</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="onboarding_image">Onboarding image</string>
    <string name="onboarding_gradient">Onboarding gradient</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_metflix">Welcome to Metflix</string>
    <string name="onboarding_description">The best movie stream ing app of the century to make your days great!</string>
    <string name="app_logo">App logo</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="my_list">My List</string>
    <string name="profile">Profile</string>
    <string name="download">Download</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>
    <string name="email_or_password_is_not_valid">Email or password is not valid</string>
    <string name="sign_up_success">Sign Up Successful</string>
    <string name="success">Success</string>
    <string name="credantials_error">Credantials Error</string>


    <string name="facebook_application_id">3452963321696571</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">b825f9066fe6b0faddfcf6f185c66f81</string>
    <string name="dialog_image">Dialog image</string>
    <string name="congratulations">Congratulations!</string>
    <string name="successful_sign_in">Your account is ready to use. You will be redirected to the Home page in a few seconds.</string>
    <string name="movie_poster">Movie poster</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="see_all">See all</string>
    <string name="play">Play</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="now_playing_series">Now Playing Series</string>
    <string name="retry">Retry</string>
    <string name="sort_filter"><![CDATA[Sort & Filter]]></string>
    <string name="movie">Movie</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <string name="categories">Categories</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="genres">Genres</string>
    <string name="sort">Sort</string>
    <string name="popularity">Popularity</string>
    <string name="latest_release">Latest Release</string>
    <string name="include_adult">Include Adult</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="vote_average">Vote Average</string>
    <string name="vote_count">Vote Count</string>
    <string name="list_image">List Image</string>
    <string name="empty_list">Your List is Empty</string>
    <string name="empty_list_desc">It seems that you haven\'t added \n any movies or series to the list</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">Share</string>
    <string name="star">Star</string>
    <string name="view_more">…View More</string>
    <string name="trailers">Trailers</string>
    <string name="more_like_this">More Like This</string>
    <string name="comments">Comments</string>
    <string name="images">Images</string>
    <string name="smilar">Smilar</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="download_desc">This Feature is Not Downloading Movie…\nJust Saves to Room Database</string>
    <string name="hide">Hide</string>
    <string name="added_to_list">Added List</string>
    <string name="empty_download_desc">It seems that you haven\'t downloaded \n any movies or series </string>
    <string name="empty_downloads">You Download Nothing</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Are you sure you want to delete this download?</string>
    <string name="cancel">Cancel</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="birthday">Birthday</string>
    <string name="biography">Biography</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="security">Security</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="help_center">Help Center</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="english">English</string>


</resources>